# crystallizer

./: .gitignore  CMakeLists.txt  DEPS  README  hive  newclass.pl  worker
src/: CMakeLists.txt  config.h
src/client/: client.cpp
src/fractal/: ColourComputable.cpp  ColourComputable.h  Computable.cpp  Computable.h  ComputableRange.cpp  ComputableRange.h  DataPoint.cpp  DataPoint.h  MandlebrotComputable.cpp  MandlebrotComputable.h  WarmColourComputable.cpp  WarmColourComputable.h
src/hive/: HiveMind.cpp  HiveMind.h  hive.cpp
src/log/: AbstractStream.cpp  AbstractStream.h  AliasStream.cpp  AliasStream.h  FileStream.cpp  FileStream.h  LogOpener.cpp  LogOpener.h  Logger.cpp  Logger.h  Message.cpp  Message.h  MessageType.cpp  MessageType.h  Stream.cpp  Stream.h  Subsystem.cpp  Subsystem.h  TypeRegistry.cpp  TypeRegistry.h  VerbosityLevel.cpp  VerbosityLevel.h
src/misc/: StreamAsString.cpp  StreamAsString.h
src/network/: ClientSocket.cpp  ClientSocket.h  DataReceiver.cpp  DataReceiver.h  HiveThread.cpp  HiveThread.h  ServerSocket.cpp  ServerSocket.h  WorkerList.cpp  WorkerList.h
src/server/: server.cpp
src/thread/: ConcurrentQueue.cpp  ConcurrentQueue.h
src/worker/: WorkerMind.cpp  WorkerMind.h  worker.cpp
